added ga press release

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div class="name">
 
-    <table>
+    <table class="mimi_klein">
       <tr>
         <td><h1 class="mimi">Mimi</h1></td><td><img class="center-block about-me" src="images/me.jpg"></td>
         <td><h1 class="klein">Klein</h1></td>
@@ -43,7 +43,7 @@
 
         <tr>
 
-          <td></td><td class="work"><a href="https://codepen.io/mimi13/pens/public/" target="_blank">work</a></td><td></td>
+          <td></td><td class="work"><a href="ga_press_release/index.html" target="_blank">work</a></td><td></td>
 
           </tr>
 
