add simon to work link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <tr>
 
-          <td></td><td class="work"><a href="Simon/index.html" target="_blank">work</a></td><td></td>
+          <td></td><td class="work"><a href="simon/index.html" target="_blank">work</a></td><td></td>
 
           </tr>
 
