--- a/index.html
+++ b/index.html
@@ -39,33 +39,81 @@
 
   </div><!--end name div-->
   <div class="container-fluid">
-    <div class="photos">
-      <div class="center-block"><p class="tap">(tap near bottom of photos for caption)</p></div>
-        <table>
-          <tr>
-          <td
-            <td><div id="fluid" class="image-div"><img id="basket" class = "img first top" src="images/muttybasket.jpg"><p  class="caption">cats are fluids</p></div></td>
-            <td><div id="poi" class="image-div"><img id="fire" class="img top" src="images/spinfire.jpg"><p class="caption">fire spinning</p></div></td>
-            <td><div id="evolution" class="image-div"><img id="eating" class="img last top" src="images/eatfire.jpg"><p class="caption">as scary as it looks</p></div></td>
-          </tr>
-          <tr>
-            <td><div id="knit" class="image-div"><img id="hat" class = "img first second" src="images/beanie.jpg"><p class="caption">purple slouch beanie</p></div></td>
-            <td><div id="hanging" class="image-div"><img id="silks" class="img second" src="images/silks.jpg"><p class="caption">just hangin'<br /> around</p></div></td>
-            <td><div id="playing" class="image-div"><img id="guitar" class="img last second" src="images/guitar.jpg"><p class="caption">playing guitar</p></div></td>
-          </tr>
-          <tr>
-            <td><div id="alive" class="image-div"><img id="ferment" class = "img first third" src="images/ferments.jpg"><p class="caption">it's alive!</p></div></td>
-            <td><div id="aunt" class="image-div"><img id="crazy" class="img third" src="images/crazyaunt.jpg"><p class="caption">crazy aunt-ing <br />with Ella</p></div></td>
-            <td><div id="flying" class="image-div"><img id="dragon" class="img last third" src="images/dragon.jpg"><p class="caption">just another boring day of dragon flying at burning man '15</p></div></td>
-          </tr>
-          <tr>
-            <td><div id="nerve" class="image-div"><img id="optic" class = "img first fourth" src="images/opticnerve.jpg"><p class="caption">optic nerve</p></div></td>
-            <td><div id="test" class="image-div"><img id="dye" class="img fourth" src="images/angiogram.jpg"><p class="caption">fluorescein test</p></div></td>
-            <td><div id="helping" class="image-div"><img id="mutty" class="img last fourth" src="images/muttylap.jpg"><p class="caption">Mutty likes to help</p></div></td>
-          </tr>
-        </table>
-    </div><!--end phots div-->
-    <div class="bio" id="aboutme">
+    <table>
+      <tr>
+        <td><figure class="cap">
+              <img class="img-grid" src="images/muttybasket.jpg" alt="">
+                <figcaption>cats are fluids</figcaption>
+            </figure>
+        </td>
+        <td>
+          <figure class="cap">
+              <img class="img-grid" src="images/spinfire.jpg" alt="">
+                <figcaption>fire spinning</figcaption>
+            </figure>
+        </td>
+        <td><figure class="cap">
+              <img class="img-grid" src="images/eatfire.jpg" alt="">
+                <figcaption>as scary as it looks</figcaption>
+            </figure>
+        </td>
+      </tr>
+      <tr>
+        <td><figure class="cap">
+              <img class="img-grid" src="images/beanie.jpg" alt="">
+                <figcaption>purple slouch <br>beanie</figcaption>
+            </figure>
+        </td>
+        <td>
+          <figure class="cap">
+              <img class="img-grid" src="images/silks.jpg" alt="">
+                <figcaption>just hangin'<br /> around</figcaption>
+            </figure>
+        </td>
+        <td><figure class="cap">
+              <img class="img-grid" src="images/guitar.jpg" alt="">
+                <figcaption>playing guitar</figcaption>
+            </figure>
+        </td>
+      </tr>
+      <tr>
+        <td><figure class="cap">
+              <img class="img-grid" src="images/ferments.jpg" alt="">
+                <figcaption>it's alive!</figcaption>
+            </figure>
+        </td>
+        <td>
+          <figure class="cap">
+              <img class="img-grid" src="images/crazyaunt.jpg" alt="">
+                <figcaption>crazy aunt-ing <br />with Ella</figcaption>
+            </figure>
+        </td>
+        <td><figure class="cap">
+              <img class="img-grid" src="images/dragon.jpg" alt="">
+                <figcaption>just another boring <br>day of dragon flying <br>at burning man '15</figcaption>
+            </figure>
+        </td>
+      </tr>
+      <tr>
+        <td><figure class="cap">
+              <img class="img-grid" src="images/opticnerve.jpg" alt="">
+                <figcaption>optic nerve</figcaption>
+            </figure>
+        </td>
+        <td>
+          <figure class="cap">
+              <img class="img-grid" src="images/angiogram.jpg" alt="">
+                <figcaption>fluorescein test</figcaption>
+            </figure>
+        </td>
+        <td><figure class="cap">
+              <img class="img-grid" src="images/muttylap.jpg" alt="">
+                <figcaption>Mutty likes to help</figcaption>
+            </figure>
+        </td>
+      </tr>
+    </table>
+        <div class="bio" id="aboutme">
       <h1>Hi! I'm Mimi. </h1>
         <p>
  I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt. Burning Man has been a big part of my life since 2011.
