--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
+  <div class="container-fluid">
 
   <div class="name">
 
@@ -29,7 +31,7 @@
           <td class="about"><a href="#aboutme" class="smoothScroll">about</a></td><td></td><td></td>
         </tr>
         <tr>
-          <td></td><td class="work"><a href="simonsays/index.html" target="_blank">work</a></td><td></td>
+          <td></td><td class="portfolio-link"><a href="#portfolio" class="smoothScroll" target="_blank">portfolio</a></td><td></td>
         </tr>
         <tr>
           <td></td><td></td><td class="contact"><a href="mailto:mimi13klein@gmail.com" target="_blank">contact</a></td>
@@ -38,7 +40,8 @@
         </nav>
 
   </div><!--end name div-->
-  <div class="container-fluid">
+
+  <div class="biography">
     <table>
       <tr>
         <td><figure class="cap">
@@ -122,6 +125,36 @@ I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to
  <a href="mailto:mimi13klein@gmail.com" target="_blank">Say hi !</a>
         </p>
     </div><!--end bio div-->
+  </div><!--end container-->
+
+  <div class="portfolio" id="portfolio">
+    <div class="row">
+      <h1 class="col-md-12">Portfolio</h1>
+    </div>
+    <div class ="row work-container">
+      <div class="work-links col-md-6">
+        <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
+      </div>
+      <div class="work-links col-md-6">
+        <img class="work-img" src="images/scheduler.png" alt="screen shot of simon game">
+      </div>
+    </div>
+    <div class="row work-container">
+      <div class="work-links col-md-6">
+        <img class="work-img" src="images/techie.png" alt="screen shot of simon game">
+      </div>
+      <div class="work-links col-md-6">
+        <img class="work-img" src="images/skycast.png" alt="screen shot of simon game">
+      </div>
+    </div>
+      </div><!--end portfolio-->
+
+      <div id="contact">
+      <i class="fa fa-envelope-open" aria-hidden="true"></i>
+      <i class="fa fa-github" aria-hidden="true"></i>
+      <i class="fa fa-linkedin" aria-hidden="true"></i>
+      </div><!--end contact-->
+
   </div><!--end container-->
 <script src="main.js" type="text/javascript"></script>
 </body>
