add scroll links

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <td class="about"><a href="#aboutme" class="smoothScroll">about</a></td><td></td><td></td>
         </tr>
         <tr>
-          <td></td><td class="portfolio-link"><a href="#portfolio" class="smoothScroll" target="_blank">portfolio</a></td><td></td>
+          <td></td><td class="portfolio-link"><a href="#portfolio" class="smoothScroll">work</a></td><td></td>
         </tr>
         <tr>
-          <td></td><td></td><td class="contact"><a href="mailto:mimi13klein@gmail.com" target="_blank">contact</a></td>
+          <td></td><td></td><td class="contact"><a href="#contact" class="smoothScroll">contact</a></td>
         </tr>
       </table>
         </nav>
@@ -121,15 +121,26 @@
         <p>
  I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt. Burning Man has been a big part of my life since 2011.
 
-I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to learn a whole new set of skills as a Web Developer.
- <a href="mailto:mimi13klein@gmail.com" target="_blank">Say hi !</a>
+I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole journey as a Web Developer.
+
         </p>
+
     </div><!--end bio div-->
+
   </div><!--end container-->
+
+  <a href="#portfolio" class="smoothScroll">
+    <div class="next-section  text-center">
+      <p class="work-tag">work</p>
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
+      </span>
+    </div>
+  </a>
 
   <div class="portfolio" id="portfolio">
     <div class="row">
-      <h1 class="col-md-12">Portfolio</h1>
+      <h1 class="col-md-12">Work</h1>
     </div>
     <div class ="row work-container">
       <div class="work-links col-md-6">
@@ -149,10 +160,35 @@ I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to
     </div>
       </div><!--end portfolio-->
 
-      <div id="contact">
-      <i class="fa fa-envelope-open" aria-hidden="true"></i>
-      <i class="fa fa-github" aria-hidden="true"></i>
-      <i class="fa fa-linkedin" aria-hidden="true"></i>
+      <a href="#contact" class="smoothScroll">
+    <div class="next-section  text-center">
+      <p class="work-tag">contact</p>
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
+      </span>
+    </div>
+  </a>
+
+      <div id="contact" class="text-center">
+        <h1>Contact</h1>
+        <div class="contact-links">
+          <a href="mailto:mimi13klein@gmail.com" class="contact-link" target="_blank">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-envelope-open fa-stack-2x" aria-hidden="true"></i>
+            </span>
+          </a>
+          <a href="https://github.com/mimi26" class="contact-link" target="_blank">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-github fa-stack-2x" aria-hidden="true"></i>
+            </span>
+          </a>
+          <a href="https://www.linkedin.com/in/mimi-klein/" class="contact-link" target="_blank">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-linkedin fa-stack-2x" aria-hidden="true"></i>
+            </span>
+          </a>
+        </div>
+
       </div><!--end contact-->
 
   </div><!--end container-->
