--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Fredericka+the+Great|Quicksand|Mate+SC" rel="stylesheet">
   <title>Mimi Klein</title>
   <meta charset="utf-8">
@@ -11,21 +10,17 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 <body>
   <div class="container-fluid">
-
   <div class="name">
-
     <table class="mimi_klein">
       <tr>
-        <td><h1 class="mimi">Mimi</h1></td><td><img class="center-block about-me" src="images/me.jpg"></td>
-        <td><h1 class="klein">Klein</h1></td>
+        <td><h1 class="mimi header">Mimi</h1></td><td><img class="center-block about-me" src="images/me.jpg" alt="image of Mimi Klein"></td>
+        <td><h1 class="klein header">Klein</h1></td>
       </tr>
     </table>
-
-      <nav>
+    <nav>
       <table>
         <tr>
           <td class="about"><a href="#aboutme" class="smoothScroll">about</a></td><td></td><td></td>
@@ -37,110 +32,105 @@
           <td></td><td></td><td class="contact"><a href="#contact" class="smoothScroll">contact</a></td>
         </tr>
       </table>
-        </nav>
-
+    </nav>
   </div><!--end name div-->
 
   <div class="biography">
     <table>
       <tr>
         <td><figure class="cap">
-              <img class="img-grid" src="images/muttybasket.jpg" alt="">
+              <img class="img-grid" src="images/muttybasket.jpg" alt="A cat sleeping curled up in a basket">
                 <figcaption>cats are fluids</figcaption>
             </figure>
         </td>
         <td>
           <figure class="cap">
-              <img class="img-grid" src="images/spinfire.jpg" alt="">
+              <img class="img-grid" src="images/spinfire.jpg" alt="A fire spinner performing">
                 <figcaption>fire spinning</figcaption>
             </figure>
         </td>
         <td><figure class="cap">
-              <img class="img-grid" src="images/eatfire.jpg" alt="">
+              <img class="img-grid" src="images/eatfire.jpg" alt="A woman eating fire">
                 <figcaption>as scary as it looks</figcaption>
             </figure>
         </td>
       </tr>
       <tr>
         <td><figure class="cap">
-              <img class="img-grid" src="images/beanie.jpg" alt="">
+              <img class="img-grid" src="images/beanie.jpg" alt="A woman modeling a knit hat">
                 <figcaption>purple slouch <br>beanie</figcaption>
             </figure>
         </td>
         <td>
           <figure class="cap">
-              <img class="img-grid" src="images/silks.jpg" alt="">
+              <img class="img-grid" src="images/silks.jpg" alt="A woman performing an acrobatic maneuver">
                 <figcaption>just hangin'<br /> around</figcaption>
             </figure>
         </td>
         <td><figure class="cap">
-              <img class="img-grid" src="images/guitar.jpg" alt="">
+              <img class="img-grid" src="images/guitar.jpg" alt="A woman playing guitar on a stage">
                 <figcaption>playing guitar</figcaption>
             </figure>
         </td>
       </tr>
       <tr>
         <td><figure class="cap">
-              <img class="img-grid" src="images/ferments.jpg" alt="">
+              <img class="img-grid" src="images/ferments.jpg" alt="Two mason jars on a counter top with things inside them">
                 <figcaption>it's alive!</figcaption>
             </figure>
         </td>
         <td>
           <figure class="cap">
-              <img class="img-grid" src="images/crazyaunt.jpg" alt="">
+              <img class="img-grid" src="images/crazyaunt.jpg" alt="An older woman and young girl both sticking their tongues out">
                 <figcaption>crazy aunt-ing <br />with Ella</figcaption>
             </figure>
         </td>
         <td><figure class="cap">
-              <img class="img-grid" src="images/dragon.jpg" alt="">
+              <img class="img-grid" src="images/dragon.jpg" alt="A woman sitting on a large white dragon statue">
                 <figcaption>just another boring <br>day of dragon flying <br>at burning man '15</figcaption>
             </figure>
         </td>
       </tr>
       <tr>
         <td><figure class="cap">
-              <img class="img-grid" src="images/opticnerve.jpg" alt="">
+              <img class="img-grid" src="images/opticnerve.jpg" alt="Medical image of an optic nerve">
                 <figcaption>optic nerve</figcaption>
             </figure>
         </td>
         <td>
           <figure class="cap">
-              <img class="img-grid" src="images/angiogram.jpg" alt="">
+              <img class="img-grid" src="images/angiogram.jpg" alt="Medical image of a retinal dye test">
                 <figcaption>fluorescein test</figcaption>
             </figure>
         </td>
         <td><figure class="cap">
-              <img class="img-grid" src="images/muttylap.jpg" alt="">
+              <img class="img-grid" src="images/muttylap.jpg" alt="A cat sitting on a laptop keyboard on a person's lap">
                 <figcaption>Mutty likes to help</figcaption>
             </figure>
         </td>
       </tr>
     </table>
-        <div class="bio" id="aboutme">
-      <h1>Hi! I'm Mimi. </h1>
+    <div class="bio" id="aboutme">
+      <h1 class="header">Hi! I'm Mimi. </h1>
         <p>
  I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt. Burning Man has been a big part of my life since 2011.
 
 I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole journey as a Web Developer.
-
         </p>
-
     </div><!--end bio div-->
-
-  </div><!--end container-->
-
-  <a href="#portfolio" class="smoothScroll">
-    <div class="next-section  text-center">
-      <p class="work-tag">work</p>
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
-      </span>
-    </div>
-  </a>
+  </div><!--end biography div-->
+    <a href="#portfolio" class="smoothScroll">
+      <div class="next-section  text-center">
+        <p class="next-label">work</p>
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
+        </span>
+      </div>
+    </a>
 
   <div class="portfolio" id="portfolio">
     <div class="row">
-      <h1 class="col-md-12">Work</h1>
+      <h1 class="header col-md-12">Work</h1>
     </div>
     <div class ="row work-container">
       <div class="work-links col-md-6">
@@ -158,40 +148,40 @@ I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to
         <img class="work-img" src="images/skycast.png" alt="screen shot of simon game">
       </div>
     </div>
-      </div><!--end portfolio-->
+  </div><!--end portfolio-->
 
-      <a href="#contact" class="smoothScroll">
+  <a href="#contact" class="smoothScroll">
     <div class="next-section  text-center">
-      <p class="work-tag">contact</p>
+      <p class="next-label">contact</p>
       <span class="fa-stack fa-lg">
         <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
       </span>
     </div>
   </a>
 
-      <div id="contact" class="text-center">
-        <h1>Contact</h1>
-        <div class="contact-links">
-          <a href="mailto:mimi13klein@gmail.com" class="contact-link" target="_blank">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-envelope-open fa-stack-2x" aria-hidden="true"></i>
-            </span>
-          </a>
-          <a href="https://github.com/mimi26" class="contact-link" target="_blank">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-github fa-stack-2x" aria-hidden="true"></i>
-            </span>
-          </a>
-          <a href="https://www.linkedin.com/in/mimi-klein/" class="contact-link" target="_blank">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-linkedin fa-stack-2x" aria-hidden="true"></i>
-            </span>
-          </a>
-        </div>
+  <div id="contact" class="text-center">
+    <h1 class="header">Contact</h1>
+      <div class="contact-links">
+        <a href="mailto:mimi13klein@gmail.com" class="contact-link" target="_blank">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-envelope-open fa-stack-2x" aria-hidden="true"></i>
+          </span>
+        </a>
+        <a href="https://github.com/mimi26" class="contact-link" target="_blank">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-github fa-stack-2x" aria-hidden="true"></i>
+          </span>
+        </a>
+        <a href="https://www.linkedin.com/in/mimi-klein/" class="contact-link" target="_blank">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-linkedin fa-stack-2x" aria-hidden="true"></i>
+          </span>
+        </a>
+      </div>
+  </div><!--end contact-->
 
-      </div><!--end contact-->
-
-  </div><!--end container-->
+  <footer>Created by Mimi Klein</footer>
+ </div><!--end container-->
 <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
