--- a/index.html
+++ b/index.html
@@ -35,82 +35,84 @@
     </nav>
   </div><!--end name div-->
 
-  <div class="biography">
-    <table>
-      <tr>
-        <td><figure class="cap">
-              <img class="img-grid" src="images/muttybasket.jpg" alt="A cat sleeping curled up in a basket">
-                <figcaption>cats are fluids</figcaption>
-            </figure>
-        </td>
-        <td>
-          <figure class="cap">
-              <img class="img-grid" src="images/spinfire.jpg" alt="A fire spinner performing">
-                <figcaption>fire spinning</figcaption>
-            </figure>
-        </td>
-        <td><figure class="cap">
-              <img class="img-grid" src="images/eatfire.jpg" alt="A woman eating fire">
-                <figcaption>as scary as it looks</figcaption>
-            </figure>
-        </td>
-      </tr>
-      <tr>
-        <td><figure class="cap">
-              <img class="img-grid" src="images/beanie.jpg" alt="A woman modeling a knit hat">
-                <figcaption>purple slouch <br>beanie</figcaption>
-            </figure>
-        </td>
-        <td>
-          <figure class="cap">
-              <img class="img-grid" src="images/silks.jpg" alt="A woman performing an acrobatic maneuver">
-                <figcaption>just hangin'<br /> around</figcaption>
-            </figure>
-        </td>
-        <td><figure class="cap">
-              <img class="img-grid" src="images/guitar.jpg" alt="A woman playing guitar on a stage">
-                <figcaption>playing guitar</figcaption>
-            </figure>
-        </td>
-      </tr>
-      <tr>
-        <td><figure class="cap">
-              <img class="img-grid" src="images/ferments.jpg" alt="Two mason jars on a counter top with things inside them">
-                <figcaption>it's alive!</figcaption>
-            </figure>
-        </td>
-        <td>
-          <figure class="cap">
-              <img class="img-grid" src="images/crazyaunt.jpg" alt="An older woman and young girl both sticking their tongues out">
-                <figcaption>crazy aunt-ing <br />with Ella</figcaption>
-            </figure>
-        </td>
-        <td><figure class="cap">
-              <img class="img-grid" src="images/dragon.jpg" alt="A woman sitting on a large white dragon statue">
-                <figcaption>just another boring <br>day of dragon flying <br>at burning man '15</figcaption>
-            </figure>
-        </td>
-      </tr>
-      <tr>
-        <td><figure class="cap">
-              <img class="img-grid" src="images/opticnerve.jpg" alt="Medical image of an optic nerve">
-                <figcaption>optic nerve</figcaption>
-            </figure>
-        </td>
-        <td>
-          <figure class="cap">
-              <img class="img-grid" src="images/angiogram.jpg" alt="Medical image of a retinal dye test">
-                <figcaption>fluorescein test</figcaption>
-            </figure>
-        </td>
-        <td><figure class="cap">
-              <img class="img-grid" src="images/muttylap.jpg" alt="A cat sitting on a laptop keyboard on a person's lap">
-                <figcaption>Mutty likes to help</figcaption>
-            </figure>
-        </td>
-      </tr>
-    </table>
-    <div class="bio" id="aboutme">
+  <div class="biography" id="aboutme">
+    <div class="grid-container">
+      <table>
+        <tr>
+          <td><figure class="cap">
+                <img class="img-grid" src="images/muttybasket.jpg" alt="A cat sleeping curled up in a basket">
+                  <figcaption>cats are fluids</figcaption>
+              </figure>
+          </td>
+          <td>
+            <figure class="cap">
+                <img class="img-grid" src="images/spinfire.jpg" alt="A fire spinner performing">
+                  <figcaption>fire spinning</figcaption>
+              </figure>
+          </td>
+          <td><figure class="cap">
+                <img class="img-grid" src="images/eatfire.jpg" alt="A woman eating fire">
+                  <figcaption>as scary as it looks</figcaption>
+              </figure>
+          </td>
+        </tr>
+        <tr>
+          <td><figure class="cap">
+                <img class="img-grid" src="images/beanie.jpg" alt="A woman modeling a knit hat">
+                  <figcaption>purple slouch <br>beanie</figcaption>
+              </figure>
+          </td>
+          <td>
+            <figure class="cap">
+                <img class="img-grid" src="images/silks.jpg" alt="A woman performing an acrobatic maneuver">
+                  <figcaption>just hangin'<br /> around</figcaption>
+              </figure>
+          </td>
+          <td><figure class="cap">
+                <img class="img-grid" src="images/guitar.jpg" alt="A woman playing guitar on a stage">
+                  <figcaption>playing guitar</figcaption>
+              </figure>
+          </td>
+        </tr>
+        <tr>
+          <td><figure class="cap">
+                <img class="img-grid" src="images/ferments.jpg" alt="Two mason jars on a counter top with things inside them">
+                  <figcaption>it's alive!</figcaption>
+              </figure>
+          </td>
+          <td>
+            <figure class="cap">
+                <img class="img-grid" src="images/crazyaunt.jpg" alt="An older woman and young girl both sticking their tongues out">
+                  <figcaption>crazy aunt-ing <br />with Ella</figcaption>
+              </figure>
+          </td>
+          <td><figure class="cap">
+                <img class="img-grid" src="images/dragon.jpg" alt="A woman sitting on a large white dragon statue">
+                  <figcaption>just another boring <br>day of dragon flying <br>at burning man '15</figcaption>
+              </figure>
+          </td>
+        </tr>
+        <tr>
+          <td><figure class="cap">
+                <img class="img-grid" src="images/opticnerve.jpg" alt="Medical image of an optic nerve">
+                  <figcaption>optic nerve</figcaption>
+              </figure>
+          </td>
+          <td>
+            <figure class="cap">
+                <img class="img-grid" src="images/angiogram.jpg" alt="Medical image of a retinal dye test">
+                  <figcaption>fluorescein test</figcaption>
+              </figure>
+          </td>
+          <td><figure class="cap">
+                <img class="img-grid" src="images/muttylap.jpg" alt="A cat sitting on a laptop keyboard on a person's lap">
+                  <figcaption>Mutty likes to help</figcaption>
+              </figure>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="bio">
       <h1 class="header">Hi! I'm Mimi. </h1>
         <p>
  I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt. Burning Man has been a big part of my life since 2011.
