--- a/index.html
+++ b/index.html
@@ -115,9 +115,22 @@
     <div class="bio">
       <h1 class="header">Hi! I'm Mimi. </h1>
         <p>
- I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt. Burning Man has been a big part of my life since 2011.
+ I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt.
 
-I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole journey as a Web Developer.
+I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole new journey contributing to making the web a more interesting, open and accessible place as a Web Developer.
+        </p>
+        <hr class="line">
+        <p class="skills">My Skills Include:
+          <ul>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>JQuery</li>
+            <li>React</li>
+            <li>Express</li>
+            <li>Ruby on Rails</li>
+            <li>PostgresSQL</li>
+          </ul>
         </p>
     </div><!--end bio div-->
   </div><!--end biography div-->
@@ -136,18 +149,46 @@ I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to
     </div>
     <div class ="row work-container">
       <div class="work-links col-md-6">
-        <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
+        <figure class="cap-bot">
+          <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
+          <figcaption class="work-caption">
+            <p>Simon:</p>
+            <a href="https://codepen.io/mimi13/full/RovPjb/" target="_blank" class="work-label">Play Simon!</a><br>
+            <a href="https://github.com/mimi26/Simon" target="_blank" class="work-label">Github</a>
+          </figcaption>
+        </figure>
       </div>
       <div class="work-links col-md-6">
-        <img class="work-img" src="images/scheduler.png" alt="screen shot of simon game">
+        <figure class="cap-bot">
+          <img class="work-img" src="images/scheduler.png" alt="screen shot of event scheduler">
+          <figcaption class="work-caption">
+            <p>Scheduler:</p>
+            <a href="http://scheduler.bitballoon.com/" target="_blank" class="work-label">Live</a><br>
+            <a href="https://github.com/mimi26/CalendarApp/tree/master/CalendarApp" target="_blank" class="work-label">Github</a>
+          </figcaption>
+        </figure>
       </div>
     </div>
     <div class="row work-container">
       <div class="work-links col-md-6">
-        <img class="work-img" src="images/techie.png" alt="screen shot of simon game">
+        <figure class="cap-bot">
+          <img class="work-img" src="images/techie.png" alt="screen shot of tech.ie app">
+          <figcaption class="work-caption">
+            <p>Tech.ie:</p>
+            <a href="https://techie-micdrop.herokuapp.com/" target="_blank" class="work-label">Live</a><br>
+            <a href="https://github.com/mattkersner/moviesApp" target="_blank" class="work-label">Github</a>
+          </figcaption>
+        </figure>
       </div>
       <div class="work-links col-md-6">
-        <img class="work-img" src="images/skycast.png" alt="screen shot of simon game">
+        <figure class="cap-bot">
+          <img class="work-img" src="images/skycast.png" alt="screen shot of weather app">
+          <figcaption class="work-caption">
+            <p>Weather App:</p>
+            <a href="https://skycastdarksky.herokuapp.com/" target="_blank" class="work-label">Live</a><br>
+            <a href="https://github.com/mimi26/skycast" target="_blank" class="work-label">Github</a>
+          </figcaption>
+        </figure>
       </div>
     </div>
   </div><!--end portfolio-->
