--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
 </head>
 <body>
   <div class="container-fluid">
-  <div class="name">
-    <table class="mimi_klein">
+    <div class="name">
+      <div class="name-header">
+        <h1 class="mimi header">Mimi</h1>
+        <img class="center-block about-me" src="images/me.jpg" alt="image of Mimi Klein">
+        <h1 class="klein header">Klein</h1>
+      </div>
+
+    <!-- <table class="mimi_klein">
       <tr>
         <td><h1 class="mimi header">Mimi</h1></td><td><img class="center-block about-me" src="images/me.jpg" alt="image of Mimi Klein"></td>
         <td><h1 class="klein header">Klein</h1></td>
       </tr>
-    </table>
+    </table> -->
     <nav>
       <table>
         <tr>
@@ -36,91 +42,92 @@
   </div><!--end name div-->
 
   <div class="biography" id="aboutme">
-    <div class="grid-container">
-      <table>
-        <tr>
-          <td><figure class="cap">
-                <img class="img-grid" src="images/muttybasket.jpg" alt="A cat sleeping curled up in a basket">
-                  <figcaption>cats are fluids</figcaption>
-              </figure>
-          </td>
-          <td>
-            <figure class="cap">
-                <img class="img-grid" src="images/spinfire.jpg" alt="A fire spinner performing">
-                  <figcaption>fire spinning</figcaption>
-              </figure>
-          </td>
-          <td><figure class="cap">
-                <img class="img-grid" src="images/eatfire.jpg" alt="A woman eating fire">
-                  <figcaption>as scary as it looks</figcaption>
-              </figure>
-          </td>
-        </tr>
-        <tr>
-          <td><figure class="cap">
-                <img class="img-grid" src="images/beanie.jpg" alt="A woman modeling a knit hat">
-                  <figcaption>purple slouch <br>beanie</figcaption>
-              </figure>
-          </td>
-          <td>
-            <figure class="cap">
-                <img class="img-grid" src="images/silks.jpg" alt="A woman performing an acrobatic maneuver">
-                  <figcaption>just hangin'<br /> around</figcaption>
-              </figure>
-          </td>
-          <td><figure class="cap">
-                <img class="img-grid" src="images/guitar.jpg" alt="A woman playing guitar on a stage">
-                  <figcaption>playing guitar</figcaption>
-              </figure>
-          </td>
-        </tr>
-        <tr>
-          <td><figure class="cap">
-                <img class="img-grid" src="images/ferments.jpg" alt="Two mason jars on a counter top with things inside them">
-                  <figcaption>it's alive!</figcaption>
-              </figure>
-          </td>
-          <td>
-            <figure class="cap">
-                <img class="img-grid" src="images/crazyaunt.jpg" alt="An older woman and young girl both sticking their tongues out">
-                  <figcaption>crazy aunt-ing <br />with Ella</figcaption>
-              </figure>
-          </td>
-          <td><figure class="cap">
-                <img class="img-grid" src="images/dragon.jpg" alt="A woman sitting on a large white dragon statue">
-                  <figcaption>just another boring <br>day of dragon flying <br>at burning man '15</figcaption>
-              </figure>
-          </td>
-        </tr>
-        <tr>
-          <td><figure class="cap">
-                <img class="img-grid" src="images/opticnerve.jpg" alt="Medical image of an optic nerve">
-                  <figcaption>optic nerve</figcaption>
-              </figure>
-          </td>
-          <td>
-            <figure class="cap">
-                <img class="img-grid" src="images/angiogram.jpg" alt="Medical image of a retinal dye test">
-                  <figcaption>fluorescein test</figcaption>
-              </figure>
-          </td>
-          <td><figure class="cap">
-                <img class="img-grid" src="images/muttylap.jpg" alt="A cat sitting on a laptop keyboard on a person's lap">
-                  <figcaption>Mutty likes to help</figcaption>
-              </figure>
-          </td>
-        </tr>
-      </table>
-    </div>
-    <div class="bio">
-      <h1 class="header">Hi! I'm Mimi. </h1>
-        <p>
- I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt.
 
-I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole new journey contributing to making the web a more interesting, open and accessible place as a Web Developer.
+      <div class="grid-container">
+        <table>
+          <tr>
+            <td><figure class="cap">
+                  <img class="img-grid" src="images/muttybasket.jpg" alt="A cat sleeping curled up in a basket">
+                    <figcaption>cats are fluids</figcaption>
+                </figure>
+            </td>
+            <td>
+              <figure class="cap">
+                  <img class="img-grid" src="images/spinfire.jpg" alt="A fire spinner performing">
+                    <figcaption>fire spinning</figcaption>
+                </figure>
+            </td>
+            <td><figure class="cap">
+                  <img class="img-grid" src="images/eatfire.jpg" alt="A woman eating fire">
+                    <figcaption>as scary as it looks</figcaption>
+                </figure>
+            </td>
+          </tr>
+          <tr>
+            <td><figure class="cap">
+                  <img class="img-grid" src="images/beanie.jpg" alt="A woman modeling a knit hat">
+                    <figcaption>purple slouch <br>beanie</figcaption>
+                </figure>
+            </td>
+            <td>
+              <figure class="cap">
+                  <img class="img-grid" src="images/silks.jpg" alt="A woman performing an acrobatic maneuver">
+                    <figcaption>just hangin'<br /> around</figcaption>
+                </figure>
+            </td>
+            <td><figure class="cap">
+                  <img class="img-grid" src="images/guitar.jpg" alt="A woman playing guitar on a stage">
+                    <figcaption>playing guitar</figcaption>
+                </figure>
+            </td>
+          </tr>
+          <tr>
+            <td><figure class="cap">
+                  <img class="img-grid" src="images/ferments.jpg" alt="Two mason jars on a counter top with things inside them">
+                    <figcaption>it's alive!</figcaption>
+                </figure>
+            </td>
+            <td>
+              <figure class="cap">
+                  <img class="img-grid" src="images/crazyaunt.jpg" alt="An older woman and young girl both sticking their tongues out">
+                    <figcaption>crazy aunt-ing <br />with Ella</figcaption>
+                </figure>
+            </td>
+            <td><figure class="cap">
+                  <img class="img-grid" src="images/dragon.jpg" alt="A woman sitting on a large white dragon statue">
+                    <figcaption>just another boring <br>day of dragon flying <br>at burning man '15</figcaption>
+                </figure>
+            </td>
+          </tr>
+          <tr>
+            <td><figure class="cap">
+                  <img class="img-grid" src="images/opticnerve.jpg" alt="Medical image of an optic nerve">
+                    <figcaption>optic nerve</figcaption>
+                </figure>
+            </td>
+            <td>
+              <figure class="cap">
+                  <img class="img-grid" src="images/angiogram.jpg" alt="Medical image of a retinal dye test">
+                    <figcaption>fluorescein test</figcaption>
+                </figure>
+            </td>
+            <td><figure class="cap">
+                  <img class="img-grid" src="images/muttylap.jpg" alt="A cat sitting on a laptop keyboard on a person's lap">
+                    <figcaption>Mutty likes to help</figcaption>
+                </figure>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="bio">
+        <h1 class="header">Hi! I'm Mimi. </h1>
+        <p>
+   I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt.
+
+  I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole new journey contributing to making the web a more interesting, open and accessible place as a Web Developer.
         </p>
         <hr class="line">
-        <p class="skills">My Skills Include:
+        <p class="skills text-center">My Skills Include:
           <ul>
             <li>HTML5</li>
             <li>CSS</li>
@@ -132,7 +139,8 @@ I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to
             <li>PostgresSQL</li>
           </ul>
         </p>
-    </div><!--end bio div-->
+      </div><!--end bio div-->
+
   </div><!--end biography div-->
     <a href="#portfolio" class="smoothScroll">
       <div class="next-section  text-center">
