add media queries

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
         <img class="center-block about-me" src="images/me.jpg" alt="image of Mimi Klein">
         <h1 class="klein header">Klein</h1>
       </div>
+      <nav>
+        <div class="mimi_klein">
+          <div class="about">
+            <a href="#aboutme" class="smoothScroll">about</a>
+          </div>
+          <div class="portfolio-link">
+            <a href="#portfolio" class="smoothScroll">work</a>
+          </div>
+          <div class="contact">
+            <a href="#contact" class="smoothScroll">contact</a>
+          </div>
+        </div>
+      </nav>
 
     <!-- <table class="mimi_klein">
       <tr>
@@ -26,7 +39,7 @@
         <td><h1 class="klein header">Klein</h1></td>
       </tr>
     </table> -->
-    <nav>
+    <!-- <nav>
       <table>
         <tr>
           <td class="about"><a href="#aboutme" class="smoothScroll">about</a></td><td></td><td></td>
@@ -38,7 +51,7 @@
           <td></td><td></td><td class="contact"><a href="#contact" class="smoothScroll">contact</a></td>
         </tr>
       </table>
-    </nav>
+    </nav> -->
   </div><!--end name div-->
 
   <div class="biography" id="aboutme">
