add media queries

--- a/index.html
+++ b/index.html
@@ -32,31 +32,31 @@
           </div>
         </div>
       </nav>
+    </div><!--end name div-->
+    <div class="biography" id="aboutme">
+      <div class="bio">
+        <h1 class="header">Hi! I'm Mimi. </h1>
+        <p>
+   I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt.
 
-    <!-- <table class="mimi_klein">
-      <tr>
-        <td><h1 class="mimi header">Mimi</h1></td><td><img class="center-block about-me" src="images/me.jpg" alt="image of Mimi Klein"></td>
-        <td><h1 class="klein header">Klein</h1></td>
-      </tr>
-    </table> -->
-    <!-- <nav>
-      <table>
-        <tr>
-          <td class="about"><a href="#aboutme" class="smoothScroll">about</a></td><td></td><td></td>
-        </tr>
-        <tr>
-          <td></td><td class="portfolio-link"><a href="#portfolio" class="smoothScroll">work</a></td><td></td>
-        </tr>
-        <tr>
-          <td></td><td></td><td class="contact"><a href="#contact" class="smoothScroll">contact</a></td>
-        </tr>
-      </table>
-    </nav> -->
-  </div><!--end name div-->
-
-  <div class="biography" id="aboutme">
-
+  I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole new journey contributing to making the web a more interesting, open and accessible place as a Web Developer.
+        </p>
+        <hr class="line">
+        <p class="skills text-center">My Skills Include:
+          <ul>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>JQuery</li>
+            <li>React</li>
+            <li>Express</li>
+            <li>Ruby on Rails</li>
+            <li>PostgresSQL</li>
+          </ul>
+        </p>
+      </div><!--end bio div-->
       <div class="grid-container">
+        <p class="tap">(tap photo for caption)</p>
         <table>
           <tr>
             <td><figure class="cap">
@@ -132,31 +132,9 @@
           </tr>
         </table>
       </div>
-      <div class="bio">
-        <h1 class="header">Hi! I'm Mimi. </h1>
-        <p>
-   I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt.
-
-  I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole new journey contributing to making the web a more interesting, open and accessible place as a Web Developer.
-        </p>
-        <hr class="line">
-        <p class="skills text-center">My Skills Include:
-          <ul>
-            <li>HTML5</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>JQuery</li>
-            <li>React</li>
-            <li>Express</li>
-            <li>Ruby on Rails</li>
-            <li>PostgresSQL</li>
-          </ul>
-        </p>
-      </div><!--end bio div-->
-
-  </div><!--end biography div-->
+    </div><!--end biography div-->
     <a href="#portfolio" class="smoothScroll">
-      <div class="next-section  text-center">
+      <div class="next-section  work-section text-center">
         <p class="next-label">work</p>
         <span class="fa-stack fa-lg">
           <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
@@ -168,6 +146,7 @@
     <div class="row">
       <h1 class="header col-md-12">Work</h1>
     </div>
+    <div class="tap">Tap on Images below</div>
     <div class ="row work-container">
       <div class="work-links col-md-6">
         <figure class="cap-bot">
