changed font of captions

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
               </tr>
               <tr>
                 <td><figure class="cap">
-                      <img class="img-grid" src="images/ferments.jpg" alt="Two mason jars on a counter top with things inside them">
+                      <img class="img-grid" src="images/ferments.jpg" alt="Two mason jars on a counter top with things fermenting inside them">
                         <figcaption>it's alive!</figcaption>
                     </figure>
                 </td>
                 <td>
                   <figure class="cap">
-                      <img class="img-grid" src="images/crazyaunt.jpg" alt="An older woman and young girl both sticking their tongues out">
+                      <img class="img-grid" src="images/crazyaunt.jpg" alt="A adult woman and young girl both sticking their tongues out">
                         <figcaption>crazy aunt-ing <br />with Ella</figcaption>
                     </figure>
                 </td>
