--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <h1 class="mimi header">Mimi</h1>
             <img class="center-block about-me" src="images/me.jpg" alt="image of Mimi Klein">
             <h1 class="klein header">Klein</h1>
-        </div>
+          </div>
+        <h1 class="web-dev header">Web Developer</h1>
         <nav>
           <div class="mimi_klein">
             <div class="about">
