--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <hr class="line">
             <p class="skills text-center">My Skills Include:
               <ul>
+                <li>React</li>
+                <li>Express</li>
+                <li>PostgreSQL</li>
                 <li>HTML5</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
                 <li>JQuery</li>
-                <li>React</li>
-                <li>Express</li>
                 <li>Ruby on Rails</li>
-                <li>PostgreSQL</li>
               </ul>
             </p>
           </div><!--end bio div-->
@@ -149,7 +149,7 @@
           </div>
           <div class="tap">Tap on Images below</div>
           <div class ="row work-container">
-            <div class="work-links col-md-6">
+            <div class="work-links top-work col-md-6">
               <figure class="cap-bot">
                 <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
                 <figcaption class="work-caption">
@@ -158,8 +158,16 @@
                   <a href="https://github.com/mimi26/Simon" target="_blank" class="work-label">Github</a>
                 </figcaption>
               </figure>
+               <div class="links">
+                <a href="https://codepen.io/mimi13/full/RovPjb/" class="work-label" target="_blank">
+                  <p class="link">Live</p>
+                </a>
+                <a href="https://github.com/mimi26/Simon" target="_blank" class="work-label">
+                  <p class="link">Github</p>
+                </a>
+              </div>
             </div>
-            <div class="work-links col-md-6">
+            <div class="work-links top-work col-md-6">
               <figure class="cap-bot">
                 <img class="work-img" src="images/scheduler.png" alt="screen shot of event scheduler">
                 <figcaption class="work-caption">
@@ -168,6 +176,14 @@
                   <a href="https://github.com/mimi26/CalendarApp/tree/master/CalendarApp" target="_blank" class="work-label">Github</a>
                 </figcaption>
               </figure>
+              <div class="links">
+                <a href="http://scheduler.bitballoon.com/" class="work-label" target="_blank">
+                  <p class="link">Live</p>
+                </a>
+                <a href="https://github.com/mimi26/CalendarApp/tree/master/CalendarApp" target="_blank" class="work-label">
+                  <p class="link">Github</p>
+                </a>
+              </div>
             </div>
           </div>
           <div class="row work-container">
@@ -176,10 +192,18 @@
                 <img class="work-img" src="images/techie.png" alt="screen shot of tech.ie app">
                 <figcaption class="work-caption">
                   <p>Tech.ie:</p>
-                  <a href="https://techie-micdrop.herokuapp.com/" target="_blank" class="work-label">Live</a><br>
-                  <a href="https://github.com/mattkersner/moviesApp" target="_blank" class="work-label">Github</a>
+                  Live<br>
+                  Github
                 </figcaption>
               </figure>
+              <div class="links">
+                <a href="https://techie-micdrop.herokuapp.com/" class="work-label" target="_blank">
+                  <p class="link">Live</p>
+                </a>
+                <a href="https://github.com/mattkersner/techie" target="_blank" class="work-label">
+                  <p class="link">Github</p>
+                </a>
+              </div>
             </div>
             <div class="work-links col-md-6">
               <figure class="cap-bot">
@@ -190,6 +214,14 @@
                   <a href="https://github.com/mimi26/skycast" target="_blank" class="work-label">Github</a>
                 </figcaption>
               </figure>
+              <div class="links">
+                <a href="https://skycastdarksky.herokuapp.com/" class="work-label" target="_blank">
+                  <p class="link">Live</p>
+                </a>
+                <a href="https://github.com/mimi26/skycast" target="_blank" class="work-label">
+                  <p class="link">Github</p>
+                </a>
+              </div>
             </div>
           </div>
         </div><!--end portfolio-->
